feat: implementar tela de onboarding funcional

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,4 +57,7 @@ flutter:
 
   assets:
     - assets/logo.png
+    - assets/onboarding1.png
+    - assets/onboarding2.png
+    - assets/onboarding3.png
 
