--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
   flutter:
     sdk: flutter
-
+  provider: ^6.0.3
   cached_network_image: ^3.2.3
 
   shared_preferences: ^2.2.2
