--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  http: ^0.13.6
+  http: ^1.3.0
 
   flutter:
     sdk: flutter
@@ -38,6 +38,10 @@ dependencies:
   shared_preferences: ^2.2.2
 
   font_awesome_flutter: ^10.8.0
+
+  google_fonts: ^6.2.1
+
+  flutter_secure_storage: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
