--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 
   flutter_secure_storage: ^9.0.0
 
+  image_picker: ^1.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -67,6 +69,7 @@ flutter:
 
   assets:
     - assets/logo.png
+    - assets/logo2.png
     - assets/onboarding1.png
     - assets/onboarding2.png
     - assets/onboarding3.png
